5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1575_1330.log
== TEST (2019-03-12 11:42:43) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:42) 
-- CODE:
print(250/6) round(41.666, 2)
-- ERROR:
File "XXXX", line 1
    print(250/6) round(41.666, 2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:49) 
-- CODE:
print(250/6) 
round(41.666, 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:53) 
-- CODE:
print(250/6) 
round(41.666, 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:13) 
-- CODE:
print(round(250/6))

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:16) 
-- CODE:
print(round(250/6))

-- EXECUTION TIME:
0.148529
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:19) 
-- CODE:
print(round(250/6))

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:24) 
-- CODE:
print(round(250/6)2)

-- ERROR:
File "XXXX", line 1
    print(round(250/6)2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:30) 
-- CODE:
print(round(250/6) 2)

-- ERROR:
File "XXXX", line 1
    print(round(250/6) 2)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:40) 
-- CODE:
print(round(250/6), 2)

-- OUTPUT:
42 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:44) 
-- CODE:
print(round(250/6), 2)

-- EXECUTION TIME:
0.129604
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:48) 
-- CODE:
print(round(250/6),2)

-- OUTPUT:
42 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:52) 
-- CODE:
print(round(250/6),2)

-- EXECUTION TIME:
0.212614
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:08) 
-- CODE:
print(round(250/6),2)
-- OUTPUT:
42 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:12) 
-- CODE:
print(round(250/6), 2)
-- OUTPUT:
42 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:46:15) 
-- CODE:
print(round(250/6), 2)
-- EXECUTION TIME:
0.218907
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:42) 
-- CODE:
print(round(250/6), 2))
-- ERROR:
File "XXXX", line 1
    print(round(250/6), 2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:46) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:46:49) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.179862
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
